--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "react-native-elements": "^0.13.0",
     "react-native-keyboard-aware-scroll-view": "^0.2.9",
     "react-navigation": "^1.0.0-beta.11"
+  },
+  "devDependencies": {
+    "reactotron-react-native": "^1.12.3"
   }
 }
